1. 使用模板方法设计模式改造java原生代码沙箱和docker容器代码沙箱 2. 新增接口签名校验逻辑